<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParentFragment.ParentStudentActionListFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/ParentStudentActionList"/>

            <Button
                android:id="@+id/consult_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_below="@+id/title"
                android:text="@string/consult_history"/>

            <Button
                android:id="@+id/consult_quiz_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_below="@+id/consult_history"
                android:text="@string/quiz_done_string"/>

            <Button
                android:id="@+id/add_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_below="@+id/consult_quiz_done"
                android:text="@string/reminder_string"/>

            <Button
                android:id="@+id/extend_subscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_below="@+id/add_reminder"
                android:text="@string/extend_subscription"/>

            <Button
                android:id="@+id/modify_subscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_below="@+id/extend_subscription"
                android:text="@string/change_subscription"/>

            <Button
                android:id="@+id/previous_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_below="@+id/modify_subscription"
                android:text="@string/previous_page"/>

        </RelativeLayout>



    </FrameLayout>
</ScrollView>
